# SpecLoc

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-cpu.txt  requirements-cu118.txt  requirements-dev.txt  requirements.txt  运行手册.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
configs/: aitodCenternetR50.py  rsodCenternetR50.py
data/: README.md
docs/: THIRD_PARTY_NOTICES.md  实验记录模板.md
requirements/: README.md  base.txt  cpu.txt  cuda118.txt  cuda121.txt  dev.txt  environment.yml
scripts/: checkEnv.py  prepareRsod.py  runCloudExperiment.sh  validateAitod.py  validateRsod.py
src/specloc/: __init__.py  __main__.py  cli.py  registry.py
src/specloc/engine/: __init__.py
src/specloc/engine/hooks/: __init__.py  experimentMetadataHook.py
src/specloc/evaluation/: __init__.py  aitodMetric.py
tests/: __init__.py  test_aitod_metric.py  test_check_env.py  test_cli.py  test_dataset_configs.py  test_metadata_hook.py  test_prepare_rsod.py  test_run_cloud_script.py  test_spectrum_information_gate.py  test_spectrum_object_table.py  test_validate_aitod.py  test_validate_rsod.py
tools/: __init__.py  cliUtils.py  distTrain.sh  test.py  train.py
tools/analysisTools/: __init__.py  extractSpectrumObjectTable.py  spectrumInformationGate.py
